Working on horizontal scrolling issue.
Horizontal scrolling issue still showing up on home page.

--- a/my_website/projects/static/projects/style.css
+++ b/my_website/projects/static/projects/style.css
@@ -36,6 +36,12 @@ body, html {
     min-height: 100%;
 }
 
+.container-no-margin {
+  width: inherit;
+/*  margin:0 ! important;
+  padding:0 ! important;*/
+}
+
 /*Sets the border dividers to a custom color*/
 .border-custom {
   border-top: 1px solid #CFCFCF;
